# GoboHide

./: README  autogen.sh  configure.ac
po/: LINGUAS  es_ES.po
src/: gobohide.c  gobohide.h
